--- a/index.yaml
+++ b/index.yaml
@@ -10,6 +10,11 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: CommunityPost
+  properties:
+  - name: post_user_id
+  - name: created_at
+
 - kind: UserPost
   properties:
   - name: post_user_id
